--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					
 					<h2>News</h2>
 					<div class="row">
-						<div class="col-sm-6 col-md-4">
+						<div class="col-sm-4 col-md-4 col-xs-12">
 							<div class="thumbnail">
 								<a href="#" data-toggle="modal" data-target="#communities" class="thumbnail no-bm">
 									<img src="img/communities.jpg" alt="Communities">
@@ -44,7 +44,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4">
+						<div class="col-sm-4 col-md-4 col-xs-12">
 							<div class="thumbnail">
 								<a href="#" data-toggle="modal" data-target="#actionGroup" class="thumbnail no-bm">
 									<img src="img/actionGroup.jpg" alt="Action Group">
@@ -56,7 +56,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-6 col-md-4">
+						<div class="col-sm-4 col-md-4 col-xs-12">
 							<div class="thumbnail">
 								<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-bm">
 									<img src="img/pressRelease.jpg" alt="...">
@@ -135,20 +135,6 @@
 
 		<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
-		<script>
-			function centerModal() {
-				$(this).css('display', 'block');
-				var $dialog = $(this).find(".modal-dialog");
-				var offset = ($(window).height() - $dialog.height()) / 2;
-				// Center modal vertically in window
-				$dialog.css("margin-top", offset);
-			}
-
-			$('.modal').on('show.bs.modal', centerModal);
-			$(window).on("resize", function () {
-				$('.modal:visible').each(centerModal);
-			});
-		</script>
 	</body>
 </html>
 
