--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					<p>We seek to improve services through awareness and understanding and as a community, we can make life better for people living with dementia. We can show how it is good for everyone and a benefit to all.</p>
 					
 					<h2>News</h2>
-					<div class="row">
-						<div class="col-sm-4 col-md-4 col-xs-12">
+					<div class="row container-fluid">
+						<div class="thumb col-sm-4 col-md-4 col-xs-12">
 							<div class="thumbnail">
 								<a href="#" data-toggle="modal" data-target="#communities" class="thumbnail no-bm">
 									<img src="img/communities.jpg" alt="Communities">
@@ -135,6 +135,15 @@
 
 		<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			
+			ga('create', 'UA-61944834-1', 'auto');
+			ga('send', 'pageview');
+		</script>
 	</body>
 </html>
 
