--- a/index.html
+++ b/index.html
@@ -24,64 +24,85 @@
 			</div>
 		</header>
 		<content>
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3">
-					<h2>Who we are</h2>
-					<p>We are a volunteer group committed to developing Ringwood, Bransgore and the surrounding area as a Dementia Friendly Community.</p>
-					<p>We seek to improve services through awareness and understanding and as a community, we can make life better for people living with dementia. We can show how it is good for everyone and a benefit to all.</p>
-					
-					<h2>News</h2>
-					<div class="row container-fluid">
-						<div class="thumb col-sm-4 col-md-4 col-xs-12">
-							<div class="thumbnail">
-								<a href="#" data-toggle="modal" data-target="#communities" class="thumbnail no-bm">
-									<img src="img/communities.jpg" alt="Communities">
-								</a>
-								<div class="caption">
-									<h3 class="text-center">Communities</h3>
-									<p>A picture paints a thousand words. What does becoming dementia friendly mean?<br> &nbsp;</p>
-									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#communities" >View</a></p>
+			<div class="container" id="container">
+				<div class="row">
+					<div class="col-md-10 col-md-offset-1">
+						<h2>Who we are</h2>
+						<p>We are a volunteer group committed to developing Ringwood, Bransgore and the surrounding area as a Dementia Friendly Community.</p>
+						<p>We seek to improve services through awareness and understanding and as a community, we can make life better for people living with dementia. We can show how it is good for everyone and a benefit to all.</p>
+						<br>
+						<h2 style="color: #1F7EDE">Dementia Friends Information Sessions</h2>
+						<p><b>Venue:</b> Stillwater Park</a> opposite Poulner Junior School in Ringwood. <a href="http://goo.gl/forms/BSzJDOiUVs" target="_blank">Click here to book</a> or contact us.</p>
+						<table class="table table-hover" style="width: 300px">
+							<tr>
+								<th>Date</th>
+								<th class="text-center">Session</th>
+								<th class="text-center">Session</th>
+							</tr>
+							<tr>
+								<td>Wednesday 6th May</td>
+								<td class="text-center">14:00</td>
+								<td class="text-center">19:00</td>
+							</tr>
+							<tr>
+								<td>Thursday 14th May</td>
+								<td class="text-center">10:30</td>
+								<td class="text-center">14:00</td>
+							</tr>
+						</table>
+						<br>
+						<h2>News</h2>
+						<div class="row container-fluid">
+							<div class="thumb col-sm-4 col-md-4 col-xs-12">
+								<div class="thumbnail">
+									<a href="#" data-toggle="modal" data-target="#communities" class="thumbnail no-bm">
+										<img src="img/communities.jpg" alt="Communities">
+									</a>
+									<div class="caption">
+										<h3 class="text-center">Communities</h3>
+										<p>A picture paints a thousand words. What does becoming dementia friendly mean?<br> &nbsp;</p>
+										<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#communities">View</a></p>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-4 col-md-4 col-xs-12">
+								<div class="thumbnail">
+									<a href="#" data-toggle="modal" data-target="#actionGroup" class="thumbnail no-bm">
+										<img src="img/actionGroup.jpg" alt="Action Group">
+									</a>
+									<div class="caption">
+										<h3 class="text-center">Dementia Action Group</h3>
+										<p>Find out more at our information sessions.<br>&nbsp;</p>
+										<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#actionGroup">View</a></p>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-4 col-md-4 col-xs-12">
+								<div class="thumbnail">
+									<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-bm">
+										<img src="img/pressRelease.jpg" alt="...">
+									</a>
+									<div class="caption">
+										<h3 class="text-center">Press Release</h3>
+										<p>Town Councilors lead the way to make Ringwood and Bransgore a Dementia Friendly Community</p>
+										<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#pressRelease">View</a></p>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-4 col-md-4 col-xs-12">
-							<div class="thumbnail">
-								<a href="#" data-toggle="modal" data-target="#actionGroup" class="thumbnail no-bm">
-									<img src="img/actionGroup.jpg" alt="Action Group">
-								</a>
-								<div class="caption">
-									<h3 class="text-center">Dementia Action Group</h3>
-									<p>Find out more at our information sessions.<br>&nbsp;</p>
-									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#actionGroup" >View</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-4 col-md-4 col-xs-12">
-							<div class="thumbnail">
-								<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-bm">
-									<img src="img/pressRelease.jpg" alt="...">
-								</a>
-								<div class="caption">
-									<h3 class="text-center">Press Release</h3>
-									<p>Town Councilors lead the way to make Ringwood and Bransgore a Dementia Friendly Community</p>
-									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#pressRelease" >View</a></p>
-								</div>
-							</div>
-						</div>
+
+						<h2>Contact Us</h2>
+						<p class="contact"><strong>Sue Scott</strong> - Tel <code>01202 986179</code> or email <code>suescott@talktalk.net</code></p>
+						<p class="contact"><strong>Krista Allardyce</strong> - Tel <code>01425 483117</code> or email <code>kristaallardyce@hotmail.com</code></p>				
+
 					</div>
-
-					<h2>Contact Us</h2>
-					<p class="contact"><strong>Sue Scott</strong> - Tel <code>01202 986179</code> or email <code>suescott@talktalk.net</code></p>
-					<p class="contact"><strong>Krista Allardyce</strong> - Tel <code>01425 483117</code> or email <code>kristaallardyce@hotmail.com</code></p>
-					
-
 				</div>
+				<footer>
+					<div class="fluid-container">
+						Ringwood and Bransgore Dementia Action Group 2015
+					</div>
+				</footer>
 			</div>
-			<footer>
-				<div class="fluid-container">
-					Ringwood and Bransgore Dementia Action Group 2015
-				</div>
-			</footer>
 		</content>
 		
 		
@@ -91,7 +112,8 @@
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 						<h4 class="modal-title" id="myModalLabel">Dementia Friendly Communities</h4>
-					</div>					<div class="modal-body">
+					</div>
+					<div class="modal-body">
 						<img src="img/communitiesPoster.jpg" class="img-responsive">
 					</div>
 				</div>
@@ -141,6 +163,16 @@
 			
 			ga('create', 'UA-61944834-1', 'auto');
 			ga('send', 'pageview');
+			
+			$('#communities').click(function() {
+				$(this).modal('hide');
+			});
+			$('#actionGroup').click(function() {
+				$(this).modal('hide');
+			});
+			$('#pressRelease').click(function() {
+				$(this).modal('hide');
+			});
 		</script>
 	</body>
 </html>
