--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<br>
 						<h2>News</h2>
 						<div class="row container-fluid">
-							<div class="thumb col-sm-4 col-md-4 col-xs-12">
+							<div class="thumb col-sm-3 col-md-3 col-xs-12">
 								<div class="thumbnail">
 									<a href="#" data-toggle="modal" data-target="#communities" class="thumbnail no-bm">
 										<img src="img/communities.jpg" alt="Communities">
@@ -65,7 +65,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-4 col-md-4 col-xs-12">
+							<div class="col-sm-3 col-md-3 col-xs-12">
 								<div class="thumbnail">
 									<a href="#" data-toggle="modal" data-target="#actionGroup" class="thumbnail no-bm">
 										<img src="img/actionGroup.jpg" alt="Action Group">
@@ -77,7 +77,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-4 col-md-4 col-xs-12">
+							<div class="col-sm-3 col-md-3 col-xs-12">
 								<div class="thumbnail">
 									<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-bm">
 										<img src="img/pressRelease.jpg" alt="...">
@@ -86,6 +86,18 @@
 										<h3 class="text-center">Press Release</h3>
 										<p>Town Councilors lead the way to make Ringwood and Bransgore a Dementia Friendly Community</p>
 										<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#pressRelease">View</a></p>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-3 col-md-3 col-xs-12">
+								<div class="thumbnail">
+									<a href="#" data-toggle="modal" data-target="#spotlightEvent" class="thumbnail no-bm">
+										<img src="img/spotlightEvent.jpg" alt="...">
+									</a>
+									<div class="caption">
+										<h3 class="text-center">Spotlight Event</h3>
+										<p>Visit our Spotlight Event at Greyfriars Community Centre on Friday 22nd May.</p>
+										<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#spotlightEvent">View</a></p>
 									</div>
 								</div>
 							</div>
@@ -153,6 +165,20 @@
 				</div>
 			</div>
 		</div>
+		<div id="spotlightEvent" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="myModalLabel">Spotlight Event</h4>
+					</div>
+					<div class="modal-body">
+						<img src="img/spotlightEventPoster.jpg" class="img-responsive">
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script>
@@ -164,13 +190,7 @@
 			ga('create', 'UA-61944834-1', 'auto');
 			ga('send', 'pageview');
 			
-			$('#communities').click(function() {
-				$(this).modal('hide');
-			});
-			$('#actionGroup').click(function() {
-				$(this).modal('hide');
-			});
-			$('#pressRelease').click(function() {
+			$('.modal').click(function() {
 				$(this).modal('hide');
 			});
 		</script>
