--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 		<meta name="author" content="Craig Allardyce">
 		
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -65,7 +64,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-3 col-md-3 col-xs-12">
+							<div class="thumb col-sm-3 col-md-3 col-xs-12">
 								<div class="thumbnail">
 									<a href="#" data-toggle="modal" data-target="#actionGroup" class="thumbnail no-bm">
 										<img src="img/actionGroup.jpg" alt="Action Group">
@@ -77,7 +76,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-3 col-md-3 col-xs-12">
+							<div class="thumb col-sm-3 col-md-3 col-xs-12">
 								<div class="thumbnail">
 									<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-bm">
 										<img src="img/pressRelease.jpg" alt="...">
@@ -89,7 +88,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-sm-3 col-md-3 col-xs-12">
+							<div class="thumb col-sm-3 col-md-3 col-xs-12">
 								<div class="thumbnail">
 									<a href="#" data-toggle="modal" data-target="#spotlightEvent" class="thumbnail no-bm">
 										<img src="img/spotlightEvent.jpg" alt="...">
@@ -104,8 +103,8 @@
 						</div>
 
 						<h2>Contact Us</h2>
-						<p class="contact"><strong>Sue Scott</strong> - Tel <code>01202 986179</code> or email <code>suescott@talktalk.net</code></p>
-						<p class="contact"><strong>Krista Allardyce</strong> - Tel <code>01425 483117</code> or email <code>kristaallardyce@hotmail.com</code></p>				
+						<p class="contact"><strong>Sue Scott</strong> - Tel <code>01202 986179</code> or email <code><a href="mailto:suescott@talktalk.net" class="code">suescott@talktalk.net</a></code></p>
+						<p class="contact"><strong>Krista Allardyce</strong> - Tel <code>01425 483117</code> or email <code><a href="mailto:kristaallardyce@hotmail.com" class="code">kristaallardyce@hotmail.com</a></code></p>			
 
 					</div>
 				</div>
