Index page update
Centered thumbnails on mobile devices
Updated footer text

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 			</div>
 		</header>
 		<content>
-			<div class="container" id="container">
-				<div class="row">
+			<div class="container-fluid" id="container">
+				<div class="row-fluid">
 					<div class="col-md-10 col-md-offset-1">
 						<h2>Who we are</h2>
 						<p>We are a volunteer group committed to developing Ringwood, Bransgore and the surrounding area as a Dementia Friendly Community.</p>
 						<p>We seek to improve services through awareness and understanding and as a community, we can make life better for people living with dementia. We can show how it is good for everyone and a benefit to all.</p>
 						<br>
-						<h2 style="color: #1F7EDE">Dementia Friends Information Sessions</h2>
+						<h2 class="blue">Dementia Friends Information Sessions</h2>
 						<p><b>Venue:</b> Stillwater Park</a> opposite Poulner Junior School in Ringwood. <a href="http://goo.gl/forms/BSzJDOiUVs" target="_blank">Click here to book</a> or contact us.</p>
 						<table class="table table-hover" style="width: 300px">
 							<tr>
@@ -54,7 +54,7 @@
 						<div class="row container-fluid">
 							<div class="thumb col-sm-3 col-md-3 col-xs-12">
 								<div class="thumbnail">
-									<a href="#" data-toggle="modal" data-target="#communities" class="thumbnail no-bm">
+									<a href="#" data-toggle="modal" data-target="#communities" class="thumbnail no-mb">
 										<img src="img/communities.jpg" alt="Communities">
 									</a>
 									<div class="caption">
@@ -66,7 +66,7 @@
 							</div>
 							<div class="thumb col-sm-3 col-md-3 col-xs-12">
 								<div class="thumbnail">
-									<a href="#" data-toggle="modal" data-target="#actionGroup" class="thumbnail no-bm">
+									<a href="#" data-toggle="modal" data-target="#actionGroup" class="thumbnail no-mb">
 										<img src="img/actionGroup.jpg" alt="Action Group">
 									</a>
 									<div class="caption">
@@ -78,7 +78,7 @@
 							</div>
 							<div class="thumb col-sm-3 col-md-3 col-xs-12">
 								<div class="thumbnail">
-									<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-bm">
+									<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-mb">
 										<img src="img/pressRelease.jpg" alt="...">
 									</a>
 									<div class="caption">
@@ -90,7 +90,7 @@
 							</div>
 							<div class="thumb col-sm-3 col-md-3 col-xs-12">
 								<div class="thumbnail">
-									<a href="#" data-toggle="modal" data-target="#spotlightEvent" class="thumbnail no-bm">
+									<a href="#" data-toggle="modal" data-target="#spotlightEvent" class="thumbnail no-mb">
 										<img src="img/spotlightEvent.jpg" alt="...">
 									</a>
 									<div class="caption">
@@ -108,14 +108,13 @@
 
 					</div>
 				</div>
-				<footer>
-					<div class="fluid-container">
-						Ringwood and Bransgore Dementia Action Group 2015
-					</div>
-				</footer>
 			</div>
 		</content>
-		
+		<footer>
+			<small>
+				&copy; 2015 Ringwood and Bransgore Dementia Action Group
+			</small>
+		</footer>
 		
 		<div id="communities" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
