--- a/index.html
+++ b/index.html
@@ -22,132 +22,130 @@
 				<h1 class="title">Dementia Action Group</h1><p class="subtitle">Ringwood and Bransgore</p>
 			</div>
 		</header>
-		<content>
-			<div class="container-fluid" id="container">
-				<div class="row-fluid">
-					<div class="col-md-10 col-md-offset-1">
-						<h2>Who we are</h2>
-						<p>We are a volunteer group committed to developing Ringwood, Bransgore and the surrounding area as a Dementia Friendly Community.</p>
-						<p>We seek to improve services through awareness and understanding and as a community, we can make life better for people living with dementia. We can show how it is good for everyone and a benefit to all.</p>
-						<br>
-						<h2 class="blue">Dementia Friends Information Sessions</h2>
-						<p><b>Venue:</b> Stillwater Park</a> opposite Poulner Junior School in Ringwood. <a href="http://goo.gl/forms/BSzJDOiUVs" target="_blank">Click here to book</a> or contact us.</p>
-						<table class="table table-hover" style="width: 300px">
-							<tr>
-								<th>Date</th>
-								<th class="text-center">Session</th>
-								<th class="text-center">Session</th>
-							</tr>
-							<tr>
-								<td>Wednesday 6th May</td>
-								<td class="text-center">14:00</td>
-								<td class="text-center">19:00</td>
-							</tr>
-							<tr>
-								<td>Thursday 14th May</td>
-								<td class="text-center">10:30</td>
-								<td class="text-center">14:00</td>
-							</tr>
-						</table>
-						<br>
-						<h2>News</h2>
-						<div class="row container-fluid">
-							<div class="thumb col-sm-3 col-md-3 col-xs-12">
-								<div class="thumbnail">
-									<a href="#" data-toggle="modal" data-target="#communities" class="thumbnail no-mb">
-										<img src="img/communities.jpg" alt="Communities">
-									</a>
-									<div class="caption">
-										<h3 class="text-center">Communities</h3>
-										<p>A picture paints a thousand words. What does becoming dementia friendly mean?<br> &nbsp;</p>
-										<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#communities">View</a></p>
-									</div>
-								</div>
-							</div>
-							<div class="thumb col-sm-3 col-md-3 col-xs-12">
-								<div class="thumbnail">
-									<a href="#" data-toggle="modal" data-target="#actionGroup" class="thumbnail no-mb">
-										<img src="img/actionGroup.jpg" alt="Action Group">
-									</a>
-									<div class="caption">
-										<h3 class="text-center">Dementia Action Group</h3>
-										<p>Find out more at our information sessions.<br>&nbsp;</p>
-										<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#actionGroup">View</a></p>
-									</div>
-								</div>
-							</div>
-							<div class="thumb col-sm-3 col-md-3 col-xs-12">
-								<div class="thumbnail">
-									<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-mb">
-										<img src="img/pressRelease.jpg" alt="...">
-									</a>
-									<div class="caption">
-										<h3 class="text-center">Press Release</h3>
-										<p>Town Councilors lead the way to make Ringwood and Bransgore a Dementia Friendly Community</p>
-										<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#pressRelease">View</a></p>
-									</div>
-								</div>
-							</div>
-							<div class="thumb col-sm-3 col-md-3 col-xs-12">
-								<div class="thumbnail">
-									<a href="#" data-toggle="modal" data-target="#spotlightEvent" class="thumbnail no-mb">
-										<img src="img/spotlightEvent.jpg" alt="...">
-									</a>
-									<div class="caption">
-										<h3 class="text-center">Spotlight Event</h3>
-										<p>Visit our Spotlight Event at Greyfriars Community Centre on Friday 22nd May.</p>
-										<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#spotlightEvent">View</a></p>
-									</div>
+		<div class="container-fluid" id="content">
+			<div class="row-fluid">
+				<div class="col-md-10 col-md-offset-1">
+					<h2>Who we are</h2>
+					<p>We are a volunteer group committed to developing Ringwood, Bransgore and the surrounding area as a Dementia Friendly Community.</p>
+					<p>We seek to improve services through awareness and understanding and as a community, we can make life better for people living with dementia. We can show how it is good for everyone and a benefit to all.</p>
+					<br>
+					<h2 class="blue">Dementia Friends Information Sessions</h2>
+					<p><b>Venue:</b> Stillwater Park opposite Poulner Junior School in Ringwood. <a href="http://goo.gl/forms/BSzJDOiUVs" target="_blank">Click here to book</a> or contact us.</p>
+					<table class="table table-hover" style="width: 300px">
+						<tr>
+							<th>Date</th>
+							<th class="text-center">Session</th>
+							<th class="text-center">Session</th>
+						</tr>
+						<tr>
+							<td>Wednesday 6th May</td>
+							<td class="text-center">14:00</td>
+							<td class="text-center">19:00</td>
+						</tr>
+						<tr>
+							<td>Thursday 14th May</td>
+							<td class="text-center">10:30</td>
+							<td class="text-center">14:00</td>
+						</tr>
+					</table>
+					<br>
+					<h2>News</h2>
+					<div class="row container-fluid">
+						<div class="thumb col-sm-3 col-md-3 col-xs-12">
+							<div class="thumbnail">
+								<a href="#" data-toggle="modal" data-target="#communities" class="thumbnail no-mb">
+									<img src="img/communities.jpg" alt="Communities">
+								</a>
+								<div class="caption">
+									<h3 class="text-center">Communities</h3>
+									<p>A picture paints a thousand words. What does becoming dementia friendly mean?<br> &nbsp;</p>
+									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#communities">View</a></p>
 								</div>
 							</div>
 						</div>
-
-						<h2>Contact Us</h2>
-						<p class="contact"><strong>Sue Scott</strong> - Tel <code>01202 986179</code> or email <code><a href="mailto:suescott@talktalk.net" class="code">suescott@talktalk.net</a></code></p>
-						<p class="contact"><strong>Krista Allardyce</strong> - Tel <code>01425 483117</code> or email <code><a href="mailto:kristaallardyce@hotmail.com" class="code">kristaallardyce@hotmail.com</a></code></p>			
-
+						<div class="thumb col-sm-3 col-md-3 col-xs-12">
+							<div class="thumbnail">
+								<a href="#" data-toggle="modal" data-target="#actionGroup" class="thumbnail no-mb">
+									<img src="img/actionGroup.jpg" alt="Action Group">
+								</a>
+								<div class="caption">
+									<h3 class="text-center">Dementia Action Group</h3>
+									<p>Find out more at our information sessions.<br>&nbsp;</p>
+									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#actionGroup">View</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="thumb col-sm-3 col-md-3 col-xs-12">
+							<div class="thumbnail">
+								<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-mb">
+									<img src="img/pressRelease.jpg" alt="...">
+								</a>
+								<div class="caption">
+									<h3 class="text-center">Press Release</h3>
+									<p>Town Councilors lead the way to make Ringwood and Bransgore a Dementia Friendly Community</p>
+									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#pressRelease">View</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="thumb col-sm-3 col-md-3 col-xs-12">
+							<div class="thumbnail">
+								<a href="#" data-toggle="modal" data-target="#spotlightEvent" class="thumbnail no-mb">
+									<img src="img/spotlightEvent.jpg" alt="...">
+								</a>
+								<div class="caption">
+									<h3 class="text-center">Spotlight Event</h3>
+									<p>Visit our Spotlight Event at Greyfriars Community Centre on Friday 22nd May.</p>
+									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#spotlightEvent">View</a></p>
+								</div>
+							</div>
+						</div>
 					</div>
+
+					<h2>Contact Us</h2>
+					<p class="contact"><strong>Sue Scott</strong> - Tel <code>01202 986179</code> or email <code><a href="mailto:suescott@talktalk.net" class="code">suescott@talktalk.net</a></code></p>
+					<p class="contact"><strong>Krista Allardyce</strong> - Tel <code>01425 483117</code> or email <code><a href="mailto:kristaallardyce@hotmail.com" class="code">kristaallardyce@hotmail.com</a></code></p>			
+
 				</div>
 			</div>
-		</content>
+		</div>
 		<footer>
 			<small>
 				&copy; 2015 Ringwood and Bransgore Dementia Action Group
 			</small>
 		</footer>
 		
-		<div id="communities" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div id="communities" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="myModalLabel">Dementia Friendly Communities</h4>
+						<h4 class="modal-title">Dementia Friendly Communities</h4>
 					</div>
 					<div class="modal-body">
-						<img src="img/communitiesPoster.jpg" class="img-responsive">
+						<img src="img/communitiesPoster.jpg" class="img-responsive" alt="Dementia Friendly Communities Poster">
 					</div>
 				</div>
 			</div>
 		</div>
-		<div id="actionGroup" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div id="actionGroup" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="myModalLabel">Information Sessions Leaflet</h4>
+						<h4 class="modal-title">Information Sessions</h4>
 					</div>
 					<div class="modal-body">
-						<img src="img/actionGroupPoster.jpg" class="img-responsive">
+						<img src="img/actionGroupPoster.jpg" class="img-responsive" alt="Information Sessions Leaflet">
 					</div>
 				</div>
 			</div>
 		</div>
-		<div id="pressRelease" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div id="pressRelease" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="myModalLabel">Recent Press Release</h4>
+						<h4 class="modal-title">Recent Press Release</h4>
 					</div>
 					<div class="modal-body">
 						<h2 class="text-center">Ringwood and Bransgore to become Dementia Friendly Communities</h2>
@@ -163,15 +161,15 @@
 				</div>
 			</div>
 		</div>
-		<div id="spotlightEvent" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div id="spotlightEvent" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="myModalLabel">Spotlight Event</h4>
+						<h4 class="modal-title">Spotlight Event</h4>
 					</div>
 					<div class="modal-body">
-						<img src="img/spotlightEventPoster.jpg" class="img-responsive">
+						<img src="img/spotlightEventPoster.jpg" class="img-responsive" alt="Spotlight Event Poster">
 					</div>
 				</div>
 			</div>
