--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Dementia Action Group - Ringwood and Bransgore</title>
-		
 		<meta charset="UTF-8">
 		<meta name="description" content="A volunteer group committed to developing Ringwood, Bransgore and the surrounding area as a Dementia Friendly Community.">
 		<meta name="keywords" content="Ringwood,Bransgore,Dementia,Action,Group">
 		<meta name="author" content="Craig Allardyce">
+		
+		<title>Dementia Action Group - Ringwood and Bransgore</title>
 		
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -114,6 +114,7 @@
 			</small>
 		</footer>
 		
+		<!-- Modals -->
 		<div id="communities" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
