Added Bransgore Times

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 					<p>We seek to improve services through awareness and understanding and as a community, we can make life better for people living with dementia. We can show how it is good for everyone and a benefit to all.</p>
 					<br>
 					<h2 class="blue">Dementia Friends Information Sessions</h2>
+					<h3>Ringwood</h3>
 					<p><b>Venue:</b> Stillwater Park opposite Poulner Junior School in Ringwood. <a href="http://goo.gl/forms/BSzJDOiUVs" target="_blank">Click here to book</a> or contact us.</p>
-					<table class="table table-hover" style="width: 300px">
+					<table class="table table-hover" style="width: 380px">
 						<tr>
 							<th>Date</th>
 							<th class="text-center">Session</th>
@@ -39,13 +40,27 @@
 						</tr>
 						<tr>
 							<td>Wednesday 6th May</td>
-							<td class="text-center">14:00</td>
-							<td class="text-center">19:00</td>
+							<td class="text-center">2:00pm</td>
+							<td class="text-center">7:00pm</td>
 						</tr>
 						<tr>
 							<td>Thursday 14th May</td>
-							<td class="text-center">10:30</td>
-							<td class="text-center">14:00</td>
+							<td class="text-center">10:30am</td>
+							<td class="text-center">2:00pm</td>
+						</tr>
+					</table>
+					<h3>Bransgore</h3>
+					<p><b>Venue:</b> The Coffee House, Betsy Lane, Bransgore BH23 8AQ. <a href="http://goo.gl/forms/BSzJDOiUVs" target="_blank">Click here to book</a> or contact us.</p>
+					<table class="table table-hover" style="width: 380px">
+						<tr>
+							<th>Date</th>
+							<th class="text-center">Session</th>
+							<th class="text-center">Session</th>
+						</tr>
+						<tr>
+							<td>Thursday 21st May</td>
+							<td class="text-center">9am - 10am</td>
+							<td class="text-center">4:15pm - 5:15pm</td>
 						</tr>
 					</table>
 					<br>
