--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
 
 	<body>
 		<header>
-			<div class="fluid-container">
-				<h1 class="title">Dementia Action Group</h1><p class="subtitle">Ringwood and Bransgore</p>
+			<div class="container">
+				<div class="row">
+					<div class="main-title col-md-12">
+						<h1 class="title">Dementia Action Group</h1>
+						<p class="subtitle">Ringwood and Bransgore</p>
+					</div>
+				</div>
 			</div>
 		</header>
 		<div class="container-fluid" id="content">
