--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 					<p>We seek to improve services through awareness and understanding and as a community, we can make life better for people living with dementia. We can show how it is good for everyone and a benefit to all.</p>
 					<br>
 					<h2 class="blue">Dementia Friends Information Sessions</h2>
-					<h3>Bransgore</h3>
-					<p><b>Venue:</b> The Coffee House, Betsy Lane, Bransgore BH23 8AQ. <a href="http://goo.gl/forms/BSzJDOiUVs" target="_blank">Click here to book</a> or contact us.</p>
+					<h3>Ringwood</h3>
+					<p><b>Venue:</b> Lesley Errington Hall, Stillwater Park, North Poulner Road, Ringwood, BH24 3JZ. <a href="http://goo.gl/forms/BSzJDOiUVs" target="_blank">Click here to book</a> or contact us.</p>
 					<table class="table table-hover" style="width: 380px">
 						<tr>
 							<th>Date</th>
@@ -44,9 +44,9 @@
 							<th class="text-center">Session</th>
 						</tr>
 						<tr>
-							<td>Thursday 21st May</td>
-							<td class="text-center">9am - 10am</td>
-							<td class="text-center">4:15pm - 5:15pm</td>
+							<td>Coming soon.</td>
+							<td class="text-center"></td>
+							<td class="text-center"></td>
 						</tr>
 					</table>
 					<br>
