Added new new items

--- a/index.html
+++ b/index.html
@@ -52,54 +52,81 @@
 					<br>
 					<h2>News</h2>
 					<div class="row container-fluid">
-						<div class="thumb col-sm-3 col-md-3 col-xs-12">
+						<div class="thumb col-sm-4 col-md-4 col-xs-12">
+							<div class="thumbnail">
+								<a href="#" data-toggle="modal" data-target="#leaflet" class="thumbnail no-mb">
+									<img src="img/leaflet.jpg" alt="More News">
+								</a>
+								<div class="caption">
+									<h3 class="text-center">Action Group Info</h3>
+									<p class="text-center">Printed leaflets will soon be available upon request.<br><br></p>
+									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#leaflet">View</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="thumb col-sm-4 col-md-4 col-xs-12">
 							<div class="thumbnail">
 								<a href="#" data-toggle="modal" data-target="#communities" class="thumbnail no-mb">
 									<img src="img/communities.jpg" alt="Communities">
 								</a>
 								<div class="caption">
 									<h3 class="text-center">Communities</h3>
-									<p>A picture paints a thousand words. What does becoming dementia friendly mean?<br> &nbsp;</p>
+									<p class="text-center">A picture paints a thousand words. What does becoming dementia friendly mean?</p>
 									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#communities">View</a></p>
 								</div>
 							</div>
 						</div>
-						<div class="thumb col-sm-3 col-md-3 col-xs-12">
+						<div class="thumb col-sm-4 col-md-4 col-xs-12">
 							<div class="thumbnail">
 								<a href="#" data-toggle="modal" data-target="#actionGroup" class="thumbnail no-mb">
 									<img src="img/actionGroup.jpg" alt="Action Group">
 								</a>
 								<div class="caption">
-									<h3 class="text-center">Dementia Action Group</h3>
-									<p>Find out more at our information sessions.<br>&nbsp;</p>
+									<h3 class="text-center">Dementia Friends</h3>
+									<p class="text-center">Find out more at our information sessions.<br><br></p>
 									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#actionGroup">View</a></p>
 								</div>
 							</div>
 						</div>
-						<div class="thumb col-sm-3 col-md-3 col-xs-12">
+					</div>
+					
+					<div class="row container-fluid">
+						<div class="thumb col-sm-4 col-md-4 col-xs-12">
 							<div class="thumbnail">
 								<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-mb">
 									<img src="img/pressRelease.jpg" alt="...">
 								</a>
 								<div class="caption">
 									<h3 class="text-center">Press Release</h3>
-									<p>Town Councilors lead the way to make Ringwood and Bransgore a Dementia Friendly Community</p>
+									<p class="text-center">Town Councilors lead the way to make Ringwood and Bransgore a Dementia Friendly Community.</p>
 									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#pressRelease">View</a></p>
 								</div>
 							</div>
 						</div>
-						<div class="thumb col-sm-3 col-md-3 col-xs-12">
+						<div class="thumb col-sm-4 col-md-4 col-xs-12">
 							<div class="thumbnail">
-								<a href="#" data-toggle="modal" data-target="#spotlightEvent" class="thumbnail no-mb">
-									<img src="img/spotlightEvent.jpg" alt="...">
+								<a href="#" data-toggle="modal" data-target="#moreNews" class="thumbnail no-mb">
+									<img src="img/moreNews.jpg" alt="More News">
 								</a>
 								<div class="caption">
-									<h3 class="text-center">Spotlight Event</h3>
-									<p>Visit our Spotlight Event at Greyfriars Community Centre on Friday 22nd May.</p>
-									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#spotlightEvent">View</a></p>
+									<h3 class="text-center">More News</h3>
+									<p class="text-center">230 Dementia Friends locally! Businesses sign up to become dementia friendly.</p>
+									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#moreNews">View</a></p>
 								</div>
 							</div>
 						</div>
+						<div class="thumb col-sm-4 col-md-4 col-xs-12">
+							<div class="thumbnail">
+								<a href="#" data-toggle="modal" data-target="#archive" class="thumbnail no-mb">
+									<img src="img/archive.jpg" alt="Spotlight Event">
+								</a>
+								<div class="caption">
+									<h3 class="text-center">Archive Items</h3>
+									<p class="text-center">A list of all archive items<br><br><br></p>
+									<p class="text-center"><a href="#" class="btn btn-primary btn-success" data-toggle="modal" data-target="#archive">Go</a></p>
+								</div>
+							</div>
+						</div>		
 					</div>
 
 					<h2>Contact Us</h2>
@@ -171,7 +198,105 @@
 						<h4 class="modal-title">Spotlight Event</h4>
 					</div>
 					<div class="modal-body">
-						<img src="img/spotlightEventPoster.jpg" class="img-responsive" alt="Spotlight Event Poster">
+						<img src="img/spotlightEventPoster.jpg" class="img-responsive center-block" alt="Spotlight Event Poster">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="moreNews" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title">More News</h4>
+					</div>
+					<div class="modal-body">
+						<h2 class="text-center">Dementia Friendly Ringwood and Bransgore Communities</h2>
+						<p>The local action team would like to extend thanks to all who supported the Dementia Friendly Ringwood event at Greyfriars Community Centre.  It proved to be an informative and imaginative day of sharing resources and experience.</p>
+						<p>The local people are responding to find ways of improving the quality of life for people living with dementia.  In Ringwood and Bransgore, 230 people have become Dementia Friends since February.  This raises the levels of awareness and understanding in the community, so that people with a diagnosis of dementia feel supported and are encouraged to continue, to lead active and independent lives.</p>
+						<p>Businesses and services, local shops and organisations are the next stage in the plan to help create a Dementia Friendly environment.  They are signing up to the Hampshire Dementia Action Alliance, forming action plans and committing to become Dementia Friendly.  Small changes to attitude and customer service along with practical ideas, will make life easier for people with dementia and their carers.</p>
+						<p>We look forward to the Launch event in the Autumn, to celebrate those in the community who will be the first to qualify for the status of “Working to become Dementia Friendly” in both Ringwood and Bransgore.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="leaflet" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title">Ringwood & Bransgore Dementia Action Group</h4>
+					</div>
+					<div class="modal-body">
+						<h3 class="blue">People Can Live Well with Dementia</h3>
+						<p class="green">A lack of social stimulation is harmful for people living with dementia. It exaggerates the impact of the condition, can lead to depression and it encourages the person to withdraw into themselves.</p>
+						<p class="green text-right"><small>Bob DeMarco - AlzheimersReadingRoom.com</small></p>
+						<hr>
+						<h3 class="blue">A Dementia Friendly Community is one where people living with dementia</h3>
+						<ul>
+							<li>can live as independently as possible</li>
+							<li>can still be part of their community and feel welcomed and secure</li>
+							<li>are met with understanding and given support when they need it</li>
+						</ul>
+						<hr>
+						<h3 class="blue">What we are hoping to achieve</h3>
+						<ul>
+							<li>to improve the quality of life for people living with dementia and their carers</li>
+							<li>to help people with dementia to engage in community life and to continue to pursue their interests and activities</li>
+							<li>to create a Dementia Friendly Community of  businesses, services and organisations, that will be able to understand and respond to the needs of people with dementia</li>
+							<li>to challenge stigma and build an awareness of people living with dementia</li>
+						</ul>
+						<hr>
+						<img src="img/DementiaFriends.jpg" class="img-responsive center-block" alt="Dementia Friends">
+						<br>
+						<p class="orange">Dementia Friends gives an understanding of dementia and the small things we can do to make a difference</p>
+						<p>We invite the local community to attend a one hour information session to become a Dementia Friend, raising awareness and understanding throughout the community</p>
+						<p>Businesses, services, organisations, churches, clubs, schools  and charities can participate in tailored interactive sessions, on the premises, to understand more about how it feels to live with dementia.</p>
+						<p>They can join the Hampshire Dementia Action Alliance and complete an Action Plan</p>
+						<p>This is the first step towards becoming a Dementia Friendly Community</p>
+						<hr>
+						<h3 class="blue">How you can get involved</h3>
+						<ul>
+							<li>become a volunteer</li>
+							<li>become a Dementia Friend or Champion</li>
+							<li>join our Action Group</li>
+							<li>help create a network of Dementia Friendly businesses, churches, clubs, organisations, societies and individuals</li>
+							<li>help build dementia awareness in the community</li>
+							<li>be part of an engaged and enthusiastic community, supportive of people living with dementia</li>
+							<li>be a good neighbour</li>
+						</ul>
+						<hr>
+						<h3 class="blue">Contact</h3>
+						<p>Krista 01425 483117<br>
+						Sue 01202 986179</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="archive" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title">Ringwood & Bransgore Dementia Action Group</h4>
+					</div>
+					<div class="modal-body">
+						<div class="container-fluid">
+							<div class="row-fluid">
+								<div class="thumb col-sm-4 col-md-4 col-xs-12">
+									<div class="thumbnail">
+										<a href="#" data-toggle="modal" data-target="#spotlightEvent" class="thumbnail no-mb">
+											<img src="img/spotlightEvent.jpg" alt="Spotlight Event">
+										</a>
+										<div class="caption">
+											<h3 class="text-center">Spotlight Event</h3>
+											<p class="text-center">Visit our Spotlight Event at Greyfriars Community Centre on Friday 22nd May</p>
+											<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#spotlightEvent">View</a></p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
