Social Groups added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								</a>
 								<div class="caption">
 									<h3 class="text-center">Action Group Info</h3>
-									<p class="text-center">Printed leaflets will soon be available upon request.<br><br></p>
+									<p class="text-center">Look out for printed leaflets available soon.<br><br></p>
 									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#leaflet">View</a></p>
 								</div>
 							</div>
@@ -90,7 +90,7 @@
 					</div>
 					
 					<div class="row container-fluid">
-						<div class="thumb col-sm-4 col-md-4 col-xs-12">
+						<div class="thumb col-sm-3 col-md-3 col-xs-12">
 							<div class="thumbnail">
 								<a href="#" data-toggle="modal" data-target="#pressRelease" class="thumbnail no-mb">
 									<img src="img/pressRelease.jpg" alt="...">
@@ -102,26 +102,38 @@
 								</div>
 							</div>
 						</div>
-						<div class="thumb col-sm-4 col-md-4 col-xs-12">
+						<div class="thumb col-sm-3 col-md-3 col-xs-12">
+							<div class="thumbnail">
+								<a href="#" data-toggle="modal" data-target="#socialGroups" class="thumbnail no-mb">
+									<img src="img/socialGroups.jpg" alt="Social Groups">
+								</a>
+								<div class="caption">
+									<h3 class="text-center">Local and Social Groups in Ringwood</h3>
+									<p class="text-center">Look out for printed cards available soon.</p>
+									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#socialGroups">View</a></p>
+								</div>
+							</div>
+						</div>
+						<div class="thumb col-sm-3 col-md-3 col-xs-12">
 							<div class="thumbnail">
 								<a href="#" data-toggle="modal" data-target="#moreNews" class="thumbnail no-mb">
 									<img src="img/moreNews.jpg" alt="More News">
 								</a>
 								<div class="caption">
 									<h3 class="text-center">More News</h3>
-									<p class="text-center">230 Dementia Friends locally! Businesses sign up to become dementia friendly.</p>
+									<p class="text-center">276 Dementia Friends locally! Businesses sign up to become dementia friendly.</p>
 									<p class="text-center"><a href="#" class="btn btn-primary btn-warning" data-toggle="modal" data-target="#moreNews">View</a></p>
 								</div>
 							</div>
 						</div>
-						<div class="thumb col-sm-4 col-md-4 col-xs-12">
+						<div class="thumb col-sm-3 col-md-3 col-xs-12">
 							<div class="thumbnail">
 								<a href="#" data-toggle="modal" data-target="#archive" class="thumbnail no-mb">
-									<img src="img/archive.jpg" alt="Spotlight Event">
+									<img src="img/archive.jpg" alt="Archives">
 								</a>
 								<div class="caption">
 									<h3 class="text-center">Archive Items</h3>
-									<p class="text-center">A list of all archive items<br><br><br></p>
+									<p class="text-center">A list of all archive items<br><br><br><br></p>
 									<p class="text-center"><a href="#" class="btn btn-primary btn-success" data-toggle="modal" data-target="#archive">Go</a></p>
 								</div>
 							</div>
@@ -296,6 +308,100 @@
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div id="socialGroups" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title">Local and Social Groups</h4>
+					</div>
+					<div class="modal-body">
+						<h3 class="orange">Local and Social Groups in Ringwood</h3>
+						<p class="green"><b>Events for people with dementia and their carers.</b></p>
+						<table class="table table-hover table-bordered">
+							<tr>
+								<td>
+									<h3>Dementia Cafe</h3>
+									Conservative Club,<br>
+									22 Christchurch Road,<br>
+									BH24 1DN<br>
+								</td>
+								<td class="v-center">
+									2nd & 4th Wed.<br>
+									2pm - 3:30pm
+								</td>
+								<td class="v-center">
+									<b>Alzheimers Society</b><br>
+									Dawn : 01590 644679
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<h3>Music Unlocking Memories</h3>
+									Trinity Centre,<br>
+									Christchurch Road,<br>
+									BH24 1DY<br>
+								</td>
+								<td class="v-center">
+									1st Thurs. & 3rd Tues.<br>
+									11am - 12pm
+								</td>
+								<td class="v-center">
+									<b>Age Concern</b><br>
+									Mercy : 01425 479415
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<h3>Reminiscence Group</h3>
+									Trinity Centre,<br>
+									Christchurch Road,<br>
+									BH24 1DY<br>
+								</td>
+								<td class="v-center">
+									2nd & 4th Mon.<br>
+									10:30am - 12pm
+								</td>
+								<td class="v-center">
+									<b>Alzheimers Society</b><br>
+									01590 644679
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<h3>Art Group</h3>
+									Trinity Centre,<br>
+									Christchurch Road,<br>
+									BH24 1DY<br>
+								</td>
+								<td class="v-center">
+									2nd & 4th Tues.<br>
+									10am - 12pm
+								</td>
+								<td class="v-center">
+									<b>Alzheimers Society</b><br>
+									Please book<br>
+									Gilda : 01725 513334
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<h3>Mens Walking Group</h3>
+								</td>
+								<td class="v-center">
+									1st & 3rd Tues.
+								</td>
+								<td class="v-center">
+									<b>Dementia Pals</b><br>
+									Alan : 01725 518537
+								</td>
+							</tr>
+						</table>
 					</div>
 				</div>
 			</div>
