--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 					</div>
 					<div class="modal-body">
 						<h3 class="orange">Local and Social Groups in Ringwood</h3>
-						<p class="green"><b>Events for people with dementia and their carers.</b></p>
+						<p class="green"><b>Events for People with Dementia and their Carers.</b></p>
 						<table class="table table-hover table-bordered">
 							<tr>
 								<td>
@@ -391,7 +391,7 @@
 							</tr>
 							<tr>
 								<td>
-									<h3>Mens Walking Group</h3>
+									<h3>Men's Walking Group</h3>
 								</td>
 								<td class="v-center">
 									1st & 3rd Tues.
