New photo, added name and number

--- a/index.html
+++ b/index.html
@@ -394,11 +394,13 @@
 									<h3>Men's Walking Group</h3>
 								</td>
 								<td class="v-center">
-									1st & 3rd Tues.
+									1st & 3rd Tues.<br>
+									Afternoons
 								</td>
 								<td class="v-center">
-									<b>Dementia Pals</b><br>
-									Alan : 01725 518537
+									<b>Avon Valley Dementia Pals</b><br>
+									Alan : 01725 518537<br>
+									Edward : 01725 513334
 								</td>
 							</tr>
 						</table>
