--- a/index.html
+++ b/index.html
@@ -348,7 +348,9 @@
 									BH24 1DY<br>
 								</td>
 								<td class="v-center">
-									1st Thurs. & 3rd Tues.<br>
+									1st Thurs.<br>
+									11:30am - 12:30pm<br>
+									3rd Tues.<br>
 									11am - 12pm
 								</td>
 								<td class="v-center">
